[gd_scene load_steps=2 format=2]

[ext_resource path="res://game-assets/game-scripts/general-scripts/boss-area-script.gd" type="Script" id=1]

[node name="BossArea" type="Area2D"]
position = Vector2( 240, 132 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[connection signal="body_shape_entered" from="." to="." method="_on_BossArea_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_BossArea_body_shape_exited"]
